--- a/index.Rmd
+++ b/index.Rmd
@@ -135,7 +135,11 @@ Tout ce matériel est accessible à partir du [site Web du cours](https://wp.sci
 :::
 
 ::: {.S-BIOG-006 .S-BIOG-027 .S-BIOG-921}
-Tout ce matériel est accessible à partir du [site Web du cours](https://wp.sciviews.org){target='top'}, du présent syllabus interactif et de Moodle pour les étudiants de l'UMONS. Ces derniers ont aussi accès au dossier ` SDD` sur `StudentTemp` en Intranet à l'UMONS. Les aspects pratiques seront à réaliser en utilisant la **'SciViews Box'**, une machine virtuelle préconfigurée que nous installerons ensemble lors du premier cours. Il est très important que vous soyez présent à ce cours, et vous pouvez venir aussi si vous le souhaitez avec votre propre ordinateur portable (sous Windows, MacOS, ou Linux peu importe, suffisamment puissant et connecté à Internet ou à l'Intranet UMONS). Enfin, vous pourrez poser vos questions par mail à l'adresse [sdd@sciviews.org](mailto:sdd@sciviews.org) ou sur [Discord](https://discord.com/invite/CuKdwzA).
+Tout ce matériel est accessible à partir du [site Web du cours](https://wp.sciviews.org){target='top'}, du présent syllabus interactif et de Moodle pour les étudiants de l'UMONS. Ces derniers ont aussi accès au dossier ` SDD` sur `StudentTemp` en Intranet à l'UMONS.
+
+Les travaux personnels seront à réaliser en utilisant un espace de travail en ligne dédié à la science des données (renku) ou sur un machine virtuelle préconfigurée, la **'SciViews Box'**, que nous installerons ensemble à la fin du premier module avec les étudiants possédant un ordinateur adapté.
+
+Vous pourrez poser vos questions par mail à l'adresse [sdd@sciviews.org](mailto:sdd@sciviews.org) ou dans les [issues du dépôt Github de ce cours](...). L'accès à se dépôt vous sera donné lors du premier module du cours.
 
 Un **outil d'annotation** et de surlignage est intégré dans le cours en ligne. Il vous permet\ :
 
@@ -163,3 +167,48 @@ N'hésitez pas à expérimenter, tester ou essayer des nouvelles idées (même a
 ```{r, echo=FALSE}
 vembedr::embed_youtube("9vJRopau0g0", width = 770, height = 433)
 ```
+
+## Approche pédagogique
+
+Ce livre en ligne ainsi que tout le matériel pédagogique cité plus haut a été développé pour être employé en pédagogie active en classe inversée. On peut résumer cette approche en deux phases. Vous apprenez d’abord à la maison, nous appliquons *ensuite* en présentiel. 
+
+### Classe inversée & pédagogie active
+
+Jusqu'à présent, la plus grande partie de vos cours vous ont été donné de manière classique. Vous avez donc suivi **passivement** un cours *ex cathedra* suivi par une séance d'exercice ou de travaux pratiques. 
+
+On peut schématiser ce mode d'apprentissage comme cela
+
+![](images/sdd1_00/organisation1.png)
+
+A la fin, un examen est indispensable pour valider l'acquisition des concetps.
+
+Le cours de science des données I utilise une autre approche et se donne en classe inversée. Le schéma ci-dessous vous propose l'organisation d'un module du cours. Vous devrez donc préparer en distanciel chaque session de cours en présentiel. Lors de chaque heure de travail lié à ce cours vous serez donc **actif**. 
+
+![](images/sdd1_00/organisation2.png)
+
+::: {.S-BIOG-006 .S-BIOG-027}
+
+### Quatre niveaux d'exercices
+
+Quatre niveaux d'exercices de difficultés croissantes vous seront proposé.
+
+- niveau I : découverte des notions dans des exercices rapides et ciblés intégrés au sein du cours en ligne.
+- niveau II : appliquer les notions vues dans des exercices sous la forme de tutoriel très cadré
+- niveau III : transférer les notions dans des projets individuels guidés sur des données biologiques
+- niveau IV : Créer/réaliser des analyses sur des projets de groupe libre sur des données biologiques nouvelles grâce aux notions vues
+
+Chaque type d'exercice est associé à un outil présenté dans la matériel pédagogique. 
+
+![](images/sdd1_00/apprendre2.png)
+
+L'ensemble de vos réponses sont collectées et utilisée afin de construire la note finale. Il n'est donc plus nécessaire de passer une examen classique en session d'examen. Tous ces exercices prouvent que vous avez acquis ou non les acquis d'apprentissage de ce cours.
+
+Votre progression au sein de exercices de chaque module est mis à votre disposition à la fin de chaque module ou bien depuis moodle.
+
+### Plan du cours
+
+Le plan du cours est une forme de contrat entre l'étudiants et les encadrants. Ce document structure les attentes de vos encadrants vis à vis de vous. Veuillez consulter ce document attentivement. 
+
+- [Plan du cours de Science des données biologiques I : années 2021-2022](https://github.com/BioDataScience-Course/sdd_lessons/blob/2021-2022/A01/sdd1_plan_cours.md) 
+
+:::
