--- a/04-Visualisation-III.Rmd
+++ b/04-Visualisation-III.Rmd
@@ -692,8 +692,8 @@ if (exists("assignation"))
   assignation("A04Ga_graphe_avance", part = NULL,
     url = "https://github.com/BioDataScience-Course/A04Ga_graphe_avance",
     course.urls = c(
-      'S-BIOG-006' = "https://classroom.github.com/a/eKp2zsPG",
-      'S-BIOG-921' = "https://classroom.github.com/a/3EMyegs8"),
+      'S-BIOG-006' = "https://classroom.github.com/a/...",
+      'S-BIOG-921' = "https://classroom.github.com/a/..."),
     toc = "Graphiques avancés et libres")
 ```
 
@@ -787,20 +787,6 @@ Afin de vous exercer à réaliser des graphiques `chart()`/`ggplot()`, proposez 
 - <http://r-statistics.co/Top50-Ggplot2-Visualizations-MasterList-R-Code.html>
 
 ```
-
-::: {.S-BIOG-006 .S-BIOG-027}
-
-```{block2, type = "bdd"}
-Dans le cadre d'une collaboration entre le cours English For Science et le cours de Science des données I, vous êtes amené créer et à maintenir un blog scientifique. 
-
-Ce blog va comprendre des articles qui traitent d'analyse de la littérature de vulgarisation scientifique et de description de données.
-
-Vous devez à présent ajouter un nouvel article qui va décrire un graphique de votre choix. 
-
-Les consignes sont disponible dans le README du template <https://github.com/BioDataScience-Course/blog-template>
-```
-
-:::
 
 ##### Pour en savoir plus {-}
 
