--- a/02-Visualisation-I.Rmd
+++ b/02-Visualisation-I.Rmd
@@ -153,8 +153,8 @@ if (exists("assignation"))
   assignation("A02Ga_nuagepoints", part = "I",
     url = "https://github.com/BioDataScience-Course/A02Ga_nuagepoints",
     course.urls = c(
-      'S-BIOG-006' = "https://classroom.github.com/a/zRJk-Ie0",
-      'S-BIOG-921' = "https://classroom.github.com/a/05EuaBKa"),
+      'S-BIOG-006' = "https://classroom.github.com/a/...",
+      'S-BIOG-921' = "https://classroom.github.com/a/..."),
     toc = "Graphiques sur `urchin_bio`, partie I : script R")
 ```
 
@@ -233,8 +233,8 @@ if (exists("assignation"))
   assignation("A02Ga_nuagepoints", part = "II",
     url = "https://github.com/BioDataScience-Course/A02Ga_nuagepoints",
     course.urls = c(
-      'S-BIOG-006' = "https://classroom.github.com/a/zRJk-Ie0",
-      'S-BIOG-921' = "https://classroom.github.com/a/05EuaBKa"),
+      'S-BIOG-006' = "https://classroom.github.com/a/...",
+      'S-BIOG-921' = "https://classroom.github.com/a/..."),
     toc = "Graphiques sur `urchin_bio`, partie II : R Markdown")
 ```
 
@@ -245,8 +245,8 @@ if (exists("assignation"))
   assignation("A02Gb_workflow", part = NULL,
     url = "https://github.com/BioDataScience-Course/A02Gb_workflow",
     course.urls = c(
-      'S-BIOG-006' = "https://classroom.github.com/a/0bQq-LZG",
-      'S-BIOG-921' = "https://classroom.github.com/g/nL7d4Gr7"),
+      'S-BIOG-006' = "https://classroom.github.com/a/...",
+      'S-BIOG-921' = "https://classroom.github.com/g/..."),
     toc = "Comparaison de workflows R-Word *versus* R-R Markdown")
 ```
 
