--- a/05-Importation-Transformation.Rmd
+++ b/05-Importation-Transformation.Rmd
@@ -749,8 +749,8 @@ if (exists("assignation"))
   assignation("A05Ga_transformation", part = NULL,
     url = "https://github.com/BioDataScience-Course/A05Ga_transformation",
     course.urls = c(
-      'S-BIOG-006' = "https://classroom.github.com/a/CwnfcuI_",
-      'S-BIOG-921' = "https://classroom.github.com/a/RvIUO8iY"),
+      'S-BIOG-006' = "https://classroom.github.com/a/...",
+      'S-BIOG-921' = "https://classroom.github.com/a/..."),
     toc = "Importation et transformation des données")
 ```
 
