--- a/08-Test-Chi2.Rmd
+++ b/08-Test-Chi2.Rmd
@@ -286,8 +286,8 @@ if (exists("assignation"))
   assignation("A08Ia_pea", part = NULL,
     url = "https://github.com/BioDataScience-Course/A08Ia_pea",
     course.urls = c(
-      'S-BIOG-006' = "https://classroom.github.com/a/TAoRvmoH",
-      'S-BIOG-921' = "https://classroom.github.com/a/CwFHyyam"),
+      'S-BIOG-006' = "https://classroom.github.com/a/...",
+      'S-BIOG-921' = "https://classroom.github.com/a/..."),
     toc = "La génétique mendéliénne")
 ```
 
@@ -563,8 +563,8 @@ if (exists("assignation2"))
   assignation2("A08Ga_human_health", part = "I",
     url = "https://github.com/BioDataScience-Course/A08Ga_human_health",
     course.urls = c(
-      'S-BIOG-006' = "https://classroom.github.com/g/NVNlyKJH",
-      'S-BIOG-921' = "https://classroom.github.com/g/eOKWHaFp"),
+      'S-BIOG-006' = "https://classroom.github.com/g/...",
+      'S-BIOG-921' = "https://classroom.github.com/g/..."),
     toc = "La biométrie humaine")
 ```
 
@@ -576,8 +576,8 @@ if (exists("assignation2"))
   assignation2("A03Ga_urchin", part = "II",
     url = "https://github.com/BioDataScience-Course/A03Ga_urchin",
     course.urls = c(
-      'S-BIOG-006' = "https://classroom.github.com/g/GDEEO7QD",
-      'S-BIOG-921' = "https://classroom.github.com/g/gqWaZbVm"),
+      'S-BIOG-006' = "https://classroom.github.com/g/...",
+      'S-BIOG-921' = "https://classroom.github.com/g/..."),
     toc = "Biométrie de l'oursin violet")
 ```
 
