--- a/12-Correlation.Rmd
+++ b/12-Correlation.Rmd
@@ -361,8 +361,8 @@ if (exists("assignation"))
   assignation("A12Ia_correlation", part = "I",
     url = "https://github.com/BioDataScience-Course/A12Ia_correlation",
     course.urls = c(
-      'S-BIOG-006' = "https://classroom.github.com/a/5PU9mxvs",
-      'S-BIOG-921' = "https://classroom.github.com/a/EBolbuyp"),
+      'S-BIOG-006' = "https://classroom.github.com/a/...",
+      'S-BIOG-921' = "https://classroom.github.com/a/..."),
     toc = "Association entre des variables")
 ```
 
@@ -434,8 +434,8 @@ if (exists("assignation2"))
   assignation2("A08Ga_human_health", part = "IV",
     url = "https://github.com/BioDataScience-Course/A08Ga_human_health",
     course.urls = c(
-      'S-BIOG-006' = "https://classroom.github.com/g/NVNlyKJH",
-      'S-BIOG-921' = "https://classroom.github.com/g/eOKWHaFp"),
+      'S-BIOG-006' = "https://classroom.github.com/g/...",
+      'S-BIOG-921' = "https://classroom.github.com/g/..."),
     toc = "La biométrie humaine")
 ```
 
@@ -690,8 +690,8 @@ if (exists("assignation"))
   assignation("A12Ia_correlation", part = "II",
     url = "https://github.com/BioDataScience-Course/A12Ia_correlation",
     course.urls = c(
-      'S-BIOG-006' = "https://classroom.github.com/a/5PU9mxvs",
-      'S-BIOG-921' = "https://classroom.github.com/a/EBolbuyp"),
+      'S-BIOG-006' = "https://classroom.github.com/a/...",
+      'S-BIOG-921' = "https://classroom.github.com/a/..."),
     toc = "Critique statistique")
 ```
 
